tests/verifier/pass/test17.ial
function void foo()
{
    block entry
    {
        invoke.tail (foo);
        leave;
    }
}
