tests/verifier/fail/test5.ial
function void foo() stdcall
{
    block entry
    {
        nop;
        ffi (foo, bar);
    }
}
